hphp/hack/test/typecheck/construct/bad_abstract_constructor.php.exp
File "bad_abstract_constructor.php", line 9, characters 7-13:
This class must be declared abstract, or provide an implementation for the abstract method '__construct' (Typing[4047])
File "bad_abstract_constructor.php", line 4, characters 19-29:
Declaration is here
