hphp/hack/test/typecheck/construct/bad_abstract_constructor.php
<?hh

interface HasConstructor {
  public function __construct(int $_);
}

abstract class MyBase implements HasConstructor {}

class MyClass extends MyBase {}
